--- a/package.json
+++ b/package.json
@@ -23,6 +23,6 @@
         "chalk": "^3.0.0",
         "console.table": "^0.10.0",
         "inquirer": "^7.0.0",
-        "mysql": "^2.2.5"
+        "mysql2": "^2.2.5"
     }
 }
